z-index bug, more style adjustments
git-svn-id: https://gtsvn.uit.no/langtech/trunk/apps/aajege@81887 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/src/sma-client/app/styles/aajege-header.styl
+++ b/src/sma-client/app/styles/aajege-header.styl
@@ -41,6 +41,7 @@ border-image()
         margin: 0 0 0 0
         padding: 0 0 0 0
         list-style-type: none
+        z-index: 5
 
         li
             margin: 0 0 0 0
@@ -93,6 +94,14 @@ border-image()
 
                 .label
                     display: none
+        h2 
+            position: absolute
+            text-align: center
+            font-size: 150%
+            margin: 0 0 0 0
+            margin-top: 0px
+            color: rgba(150, 150, 150, 1)
+
 
 
 // TODO: media queries for .aajege-header-shrinkable
