--- a/src/sma-client/app/views/categories/styles/category.styl
+++ b/src/sma-client/app/views/categories/styles/category.styl
@@ -1,6 +1,14 @@
 #category_view
 
-    #category_content
+    #category_content, #main_menu
+        position: relative
+        display: block
+        width: 100%
+        top: 0px
+        margin: 0 0 0 0
+        padding: 0 0 0 0
+
+    #category_background
         position: relative
         display: block
         height: 400px
@@ -8,6 +16,14 @@
         background-position: center
         background-repeat: no-repeat
         background-size: cover !important
+
+    #subcategory_buttons
+        display: block
+        width: 100%
+        padding-top: 35%
+        margin-left: 20px
+        top: 0px
+        position: fixed
 
     #category_buttons
         display: block
